# Module_12

./: .env  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 3c51b1a9e0c3_init.py  6383ac736e9a_init.py  a02a6e537839_init.py
src/: schemas.py
src/conf/: config.py
src/database/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: test_route_contacts.py  test_unit_repository_contacts.py
