[tool.poetry]
name = "module-12"
version = "0.1.0"
description = ""
authors = ["YarValeriy <147444561+YarValeriy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
libgravatar = "^1.0.4"
python-multipart = "^0.0.9"
passlib = "^1.7.4"
python-jose = "^3.3.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
redis = "^5.0.4"
aioredis = "^2.0.1"
cloudinary = "^1.40.0"
django-environ = "^0.11.2"
sphinx = "^7.3.7"
pytest = "^8.2.0"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["tests",]
pythonpath = "."